<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoGive</string>
    <string name="title_activity_main">GoGive</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_recipient">Recipient</string>
    <string name="name">Name</string>
    <string name="notes">Notes&#8230;</string>
    <string name="hidden">Hidden</string>
    <string name="new_gift_idea">New gift idea</string>
    <string name="title_activity_gift">Gift</string>
    <string name="gift">Gift</string>
    <string name="hello_world">Hello world!</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Are you sure you want to delete this item?</string>
    <string name="create_new_recipient">Create new recipient</string>
    <string name="action_show">Show everyone</string>
    <string name="new_person">Add person</string>
    <string name="add_to_store">Add to store</string>
    <string name="choose_a_store">Choose a store</string>
    <string name="create_a_new_store">Create a new store</string>
    <string name="store_name">Store name</string>
    <string name="title_activity_shopping">Shopping</string>
    <string name="shop">Shop</string>
    <string name="totals">Totals</string>

</resources>
