<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GiftActivity" >

    <Spinner
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:entries="@array/statuses" />

    <TextView
        android:text="@string/gift" 
        android:layout_width="wrap_content"
        />
    <EditText
        android:id="@+id/name"
        android:layout_gravity="fill_horizontal"
        android:inputType="textCapSentences" 
        />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/price" />
    <EditText
        android:id="@+id/price"
        android:layout_gravity="fill_horizontal"
        android:inputType="numberDecimal" 
        />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/notes" />

    <EditText
        android:id="@+id/notes"
        android:layout_gravity="fill_horizontal"
        android:inputType="textMultiLine" />

</GridLayout>